# bike-rental-eda

./: README.md  pyproject.toml
data/: README.md
pybike/: config.py
pybike/plotters/: boxplot_duration_trips.py  heatmap_trips.py
